--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TOHO BBA Medley</string>
+    <string name="splash_title">東方原曲BGMメドレー</string>
 
     <string name="remilia">♪ 亡き王女の為のセプテット / 東方紅魔郷</string>
     <string name="frandle">♪ U.N.オーエンは彼女なのか？ / 東方紅魔郷</string>
